Fix dark mode background color

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ section {
   display: none;
 }
 
-#dark {
+#dark body {
   background: rgb(0, 39, 108);
   background: linear-gradient(180deg, rgba(0, 39, 108, 1) 5%, rgba(0, 5, 23, 1) 67%);
 }
